--- a/Resources/Prototypes/_RMC14/Roles/Ranks/We-Ya/corporate.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Ranks/We-Ya/corporate.yml
@@ -17,11 +17,13 @@
   id: RMCRankWeYaExecutiveSpecialist
   name: Executive Specialist
   prefix: Exec. Spc.
+  paygrade: WYC5
 
 - type: rank
   id: RMCRankWeYaExecutiveSupervisor
   name: Executive Supervisor
   prefix: Exec. Spvsr.
+  paygrade: WYC6
 
 - type: rank
   id: RMCRankWeYaAssistantManager
