--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_deputy_marshal.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_deputy_marshal.yml
@@ -44,7 +44,7 @@
 - type: entity
   id: RMCRandomHumanoidProvostDeputyMarshal
   name: provost ghost role deputy marshal
-  suffix: Spawner, Player, Friendly, Low Law Understanding
+  suffix: Spawner, Player, Friendly, Whitelisted COs
   components:
   - type: Sprite
     sprite: _RMC14/Objects/CMIDs/provost.rsi
