--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_marshal.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_marshal.yml
@@ -43,7 +43,7 @@
 
 - type: randomHumanoidSettings
   parent: RMCEventHumanoid
-  id: RMCProvostDeputyMarshal
+  id: RMCProvostMarshal
   components:
   - type: GhostRole
     name: rmc-ghost-name-corp-provost-deputy-marshal
