ok final i swear

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_team_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_team_leader.yml
@@ -68,7 +68,7 @@
   equipment:
     head: RMCHeadBeretProvostSenior
     eyes: CMGlassesSecurity
-    ears: CMHeadsetHighCommand
+    ears: RMCHeadsetHighCommandProvostLead
     jumpsuit: CMJumpsuitProvostSenior
     outerClothing: RMCArmorProvostSeniorFilled
     gloves: CMHandsBlackMarine # TODO RMC14 black gloves
