--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/other_department.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Departments/other_department.yml
@@ -7,6 +7,7 @@
   roles:
 #  - CMSilicon # TODO RMC14
 #  - CMAndroid # TODO RMC14
+  - RMCSynthetic
   - CMLiaison
   - CMCorrespondent
   - CMMessTech
