--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
@@ -22,7 +22,7 @@
   - type: PresetIdCard
     job: CMSurvivor
   - type: ItemIFF
-    faction: FactionSurvivor
+    faction: Survivor
 
 - type: entity
   parent: CMIDCardSilver
@@ -32,7 +32,7 @@
   - type: PresetIdCard
     job: CMSurvivorDoctor
   - type: ItemIFF
-    faction: FactionSurvivor
+    faction: Survivor
 
 - type: entity
   parent: CMIDCardLanyard
@@ -42,7 +42,7 @@
   - type: PresetIdCard
     job: CMSurvivorEngineer
   - type: ItemIFF
-    faction: FactionSurvivor
+    faction: Survivor
 
 - type: entity
   parent: CMIDCardLanyard
@@ -57,7 +57,7 @@
   - type: PresetIdCard
     job: CMSurvivorSecurity
   - type: ItemIFF
-    faction: FactionSurvivor
+    faction: Survivor
 
 - type: entity
   parent: CMIDCardSilver
@@ -65,7 +65,7 @@
   name: liaison ID card
   components:
   - type: ItemIFF
-    faction: FactionWeYa
+    faction: WeYa
   - type: PresetIdCard
     job: CMLiaison
 
@@ -148,20 +148,11 @@
   description: A corporate holo-badge. It has a unique uncapped bottom.
   components:
   - type: ItemIFF
-    faction: FactionWeYa
+    faction: WeYa
   - type: Access
     groups:
     - Colony
     - RMCWeYa
-
-- type: entity
-  id: FactionWeYa
-  components:
-  - type: IFFFaction
-  - type: FactionFrequencies
-    channels:
-    - Colony
-    - WEYA
 
 - type: entity
   parent: CMIDCardLanyard
