--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/leader.yml
@@ -54,7 +54,7 @@
     settings: RMCPMCLeader
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCPMCLeader
   components:
   - type: GhostRole
