--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/standard.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/standard.yml
@@ -66,7 +66,7 @@
     squad: SquadFreelancer
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCFreelancerStandardFriendly
   components:
   - type: GhostRole
