--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
@@ -46,7 +46,7 @@
     settings: RMCPMCEngineer
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCPMCEngineer
   components:
   - type: GhostRole
