--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/sniper.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/sniper.yml
@@ -47,7 +47,7 @@
     settings: RMCPMCSniper
 
 - type: randomHumanoidSettings
-  parent: EventHumanoid
+  parent: RMCEventHumanoid
   id: RMCPMCSniper
   components:
   - type: GhostRole
