--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -44,7 +44,7 @@
         RMCSkillFireman: 5
         RMCSkillPowerLoader: 2
         RMCSkillVehicles: 2
-        RMCSkillJTAC: 3
+        RMCSkillJtac: 3
         RMCSkillIntel: 2
         RMCSkillDomestics: 2
         RMCSkillNavigations: 1
