--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -1,15 +1,30 @@
 - type: job
-  parent: RMCJobSynthetic
+  parent: CMJobBase
   id: RMCJobSyntheticColony
   name: rmc-job-name-synth-colony
   description: rmc-job-description-synth-colony
   playTimeTracker: RMCJobSynthColony
   ranks:
-    RMCRankSyntheticColonist: []
+    RMCRankSyntheticMG:
+    - !type:RoleTimeRequirement
+      role: RMCJobSynthetic
+      time: 252000 # 70 hours
+    RMCRankSynthetic: []
   startingGear: RMCGearSyntheticColonist
+  icon: "RMCJobIconSynth"
+  requireAdminNotify: true
+  joinNotifyCrew: true
+  whitelisted: true
   supervisors: cm-job-supervisors-colonists
   accessGroups:
   - Colonist
+  minimapIcon:
+    sprite: _RMC14/Interface/map_blips.rsi
+    state: synth
+  minimapBackground:
+   sprite: _RMC14/Interface/map_blips.rsi
+   state: background_shipside
+  roleWeight: 0.25
   special:
   - !type:AddComponentSpecial
     components:
@@ -29,7 +44,7 @@
         RMCSkillFireman: 3
         RMCSkillPowerLoader: 2
         RMCSkillVehicles: 2
-        RMCSkillJTAC: 1
+        RMCSkillJtac: 1
         RMCSkillIntel: 1
         RMCSkillDomestics: 2
 #    - type: DemoSpecWhitelist -- THEY CAN USE EVERY SPEC TOO???
@@ -37,6 +52,10 @@
 #    - type: ScoutWhitelist
 #    - type: SniperWhitelist
 #    - type: PyroWhitelist
+    - type: TacticalMapIcon
+      icon:
+        sprite: _RMC14/Interface/map_blips.rsi
+        state: synth
   hidden: true
 
 - type: startingGear
