--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
@@ -27,7 +27,7 @@
   joinNotifyCrew: false
   supervisors: cm-job-supervisors-we-ya
   access:
-  - RMCAccessWeYa
+  - RMCWeYa
   - CMAccessCommand
   - CMAccessResearch
   - CMAccessMedical
