--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_liaison.yml
@@ -11,7 +11,7 @@
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
   accessGroups:
-  - RMCAccessWeYa
+  - RMCWeYa
   - CMAccessCommand
   - CMAccessResearch
   - CMAccessMedical
