--- a/Resources/Prototypes/_RMC14/Roles/Ranks/Colony/cmb.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Ranks/Colony/cmb.yml
@@ -52,3 +52,8 @@
   id: RMCRankIHROObserver
   name: Interstellar Human Rights Observer
   prefix: "Obsv."
+
+- type: rank
+  id: RMCRankCMBResponder
+  name: CMB Communications Officer
+  prefix: "Comm."
