--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/provost_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/provost_responder.yml
@@ -1,11 +1,11 @@
 - type: job
   parent: CMJobBase
   id: RMCProvostResponder
-  name: rmc-job-name-Provost-Responder
+  name: rmc-job-name-provost-responder
   description: rmc-ghost-role-information-provost-responder-description
   playTimeTracker: RMCJobProvostResponder
   ranks:
-    RMCRankProvostAdvisor: []
+    RMCRankFirstLT: []
   startingGear: RMCGearProvostResponder
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
@@ -47,8 +47,8 @@
   id: RMCProvostResponder
   components:
   - type: GhostRole
-    name: rmc-ghost-name-Provost-responder
-    description: rmc-ghost-role-information-Provost-responder-description
+    name: rmc-ghost-name-provost-responder
+    description: rmc-ghost-role-information-provost-responder-description
     rules: rmc-ghost-role-information-responder-rules
     reregister: false
     job: RMCProvostResponder
