--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
@@ -62,7 +62,7 @@
     jumpsuit: CMJumpsuitBO
     shoes: RMCShoesLaceup
     head: RMCHeadCapFlippable
-    id: CMIDCardStaffOfficer
+    id: RMCIDCardCLFResponder
     ears: CMHeadsetHighCommand
     back: CMSatchel
     pocket1: RMCPouchGeneralLarge
@@ -71,3 +71,18 @@
 
 - type: playTimeTracker
   id: RMCJobCLFResponder
+
+- type: entity
+  parent: CMIDCardSilver
+  id: RMCIDCardCLFResponder
+  name: CLF Communications Correspondent ID card
+  description: There is a jagged carving of the letters CLF, obscuring a faded corporate logo.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/CMIDs/silver_id.rsi
+  - type: Clothing
+    slots:
+    - idcard
+    sprite: _RMC14/Objects/CMIDs/silver_id.rsi
+  - type: PresetIdCard
+    job: RMCCLFResponder
