--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/spp_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/spp_responder.yml
@@ -63,7 +63,7 @@
     outerClothing: RMCCoatSPP
     shoes: RMCBootsSPP
     head: CMHeadCapSPPUshanka
-    id: CMIDCardStaffOfficer
+    id: RMCIDCardSPPResponder
     ears: RMCHeadsetSPPCommand
     back: CMSatchel
     pocket1: RMCPouchGeneralLarge
@@ -72,3 +72,18 @@
 
 - type: playTimeTracker
   id: RMCJobSPPResponder
+
+- type: entity
+  parent: CMIDCardSilver
+  id: RMCIDCardSPPResponder
+  name: SPP Communications Officer ID card
+  description: A ID card issued to the lower ranking officers of the Socialist Progressive Peoples military.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/CMIDs/silver_id.rsi
+  - type: Clothing
+    slots:
+    - idcard
+    sprite: _RMC14/Objects/CMIDs/silver_id.rsi
+  - type: PresetIdCard
+    job: RMCSPPResponder
