Paced shoes and headset prototypes in correct ymls with correct parents, other minor fixes

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -263,11 +263,10 @@
     CMJumpsuitMP: 2
     CMHeadBeretRed: 6
     CMGlassesSecurity: 3
-    # CMHeadset: 6
     RMCScrubsPrisonMedsec: 4
     RMCScrubsPrisonMaxsec : 2
-    ClothingHeadsetPrison : 6
-    ClothingShoesPrison : 6
+    RMCHeadsetPrisoner : 6
+    RMCShoesPrisoner : 6
 
 - type: entity
   parent: CMVendor
