--- a/Resources/Prototypes/Entities/Clothing/Shoes/misc.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/misc.yml
@@ -181,3 +181,10 @@
     price: 75
   - type: Tag
     tags: [ ]
+
+# Prison Shoes
+- type: entity
+  parent: RMCShoesOrange
+  id: RMCShoesPrisoner
+  name: prisoner shoes
+  description:  A pair of orange shoes worn by prisoners as directed by marine law.
