--- a/Resources/Prototypes/_RMC14/Roles/Ranks/Colony/clf.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Ranks/Colony/clf.yml
@@ -10,5 +10,5 @@
 
 - type: rank
   id: RMCRankCLFRebelResponder
-  name: Rebel Communications Correspondent
+  name: Rebel Information Correspondent
   prefix: RComm.
