--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/clf_responder.yml
@@ -2,7 +2,7 @@
   parent: CMJobBase
   id: RMCCLFResponder
   name: rmc-job-name-clf-responder
-  description: rmc-ghost-role-information-clf-responder-description
+  description: rmc-job-description-clf-responder
   playTimeTracker: RMCJobCLFResponder
   ranks:
     RMCRankCLFRebelResponder: []
@@ -47,8 +47,8 @@
   id: RMCCLFResponder
   components:
   - type: GhostRole
-    name: rmc-ghost-name-clf-responder
-    description: rmc-ghost-role-information-clf-responder-description
+    name: rmc-job-name-clf-responder
+    description: rmc-ghost-role-information-responder-description
     rules: rmc-ghost-role-information-responder-rules
     reregister: false
     job: RMCCLFResponder
@@ -59,23 +59,20 @@
 - type: startingGear
   id: RMCGearCLFResponder
   equipment:
-    jumpsuit: CMJumpsuitBO
+    jumpsuit: CMJumpsuitTShirtRed
+    outerClothing: RMCJacketCorporateBlue
     shoes: RMCShoesLaceup
     head: RMCHeadCapFlippable
     id: RMCIDCardCLFResponder
-    ears: CMHeadsetHighCommand
+    ears: CMHeadsetColony
     back: CMSatchel
     pocket1: RMCPouchGeneralLarge
     pocket2: RMCPouchDocument
 
-
-- type: playTimeTracker
-  id: RMCJobCLFResponder
-
 - type: entity
   parent: CMIDCardSilver
   id: RMCIDCardCLFResponder
-  name: CLF Communications Correspondent ID card
+  name: CLF Information Correspondent ID card
   description: There is a jagged carving of the letters CLF, obscuring a faded corporate logo.
   components:
   - type: Sprite
@@ -86,3 +83,8 @@
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
     job: RMCCLFResponder
+
+
+- type: playTimeTracker
+  id: RMCJobCLFResponder
+
