--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
@@ -2,7 +2,7 @@
   parent: CMJobBase
   id: RMCCMBResponder
   name: rmc-job-name-cmb-responder
-  description: rmc-ghost-role-information-cmb-responder-description
+  description: rmc-job-description-cmb-responder
   playTimeTracker: RMCJobCMBResponder
   ranks:
     RMCRankCMBResponder: []
@@ -47,8 +47,8 @@
   id: RMCCMBResponder
   components:
   - type: GhostRole
-    name: rmc-ghost-name-cmb-responder
-    description: rmc-ghost-role-information-cmb-responder-description
+    name: rmc-job-name-cmb-responder
+    description: rmc-ghost-role-information-responder-description
     rules: rmc-ghost-role-information-responder-rules
     reregister: false
     job: RMCCMBResponder
@@ -59,18 +59,15 @@
 - type: startingGear
   id: RMCGearCMBResponder
   equipment:
-    jumpsuit: CMJumpsuitBO
+    jumpsuit: RMCSwatLeaderCMBUniform
+    outerClothing: RMCCoatBureauMarshal
     shoes: RMCShoesLaceup
-    head: RMCHeadCapFlippable
+    head: RMCHeadCapBureau
     id: RMCIDCardCMBResponder
-    ears: CMHeadsetHighCommand
+    ears: RMCHeadsetDistressBureau
     back: CMSatchel
     pocket1: RMCPouchGeneralLarge
     pocket2: RMCPouchDocument
-
-
-- type: playTimeTracker
-  id: RMCJobCMBResponder
 
 - type: entity
   parent: CMIDCardSilver
@@ -86,3 +83,8 @@
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
     job: RMCCMBResponder
+
+- type: playTimeTracker
+  id: RMCJobCMBResponder
+
+
