--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/free_press_responder.yml
@@ -2,7 +2,7 @@
   parent: CMJobBase
   id: RMCFreePressResponder
   name: rmc-job-name-free-press-responder
-  description: rmc-ghost-role-information-free-press-responder-description
+  description: rmc-job-description-free-press-responder
   playTimeTracker: RMCJobFreePressResponder
   ranks:
     RMCRankCivilian: []
@@ -47,8 +47,8 @@
   id: RMCFreePressResponder
   components:
   - type: GhostRole
-    name: rmc-ghost-name-free-press-responder
-    description: rmc-ghost-role-information-free-press-responder-description
+    name: rmc-job-name-free-press-responder
+    description: rmc-ghost-role-information-responder-description
     rules: rmc-ghost-role-information-responder-rules
     reregister: false
     job: RMCFreePressResponder
@@ -59,18 +59,15 @@
 - type: startingGear
   id: RMCGearFreePressResponder
   equipment:
-    jumpsuit: CMJumpsuitBO
+    jumpsuit: CMJumpsuitLiaisonCorporateFormal
+    outerClothing: RMCJacketCorporateKhaki
     shoes: RMCShoesLaceup
-    head: RMCHeadCapFlippable
+    head: ClothingHeadHatFedoraBrown
     id: RMCIDCardFreePressResponder
-    ears: CMHeadsetHighCommand
+    ears: CMHeadsetReporter
     back: CMSatchel
     pocket1: RMCPouchGeneralLarge
     pocket2: RMCPouchDocument
-
-
-- type: playTimeTracker
-  id: RMCJobFreePressResponder
 
 - type: entity
   parent: CMIDCardSilver
@@ -86,3 +83,6 @@
     sprite: _RMC14/Objects/CMIDs/silver_id.rsi
   - type: PresetIdCard
     job: RMCFreePressResponder
+
+- type: playTimeTracker
+  id: RMCJobFreePressResponder
