Fix CMB rank to be parity, remove Comm. Off. rank made for this PR

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Fax_Responders/cmb_responder.yml
@@ -5,7 +5,7 @@
   description: rmc-job-description-cmb-responder
   playTimeTracker: RMCJobCMBResponder
   ranks:
-    RMCRankCMBResponder: []
+    RMCRankCMBDeputy: []
   startingGear: RMCGearCMBResponder
   icon: "CMJobIconEmpty"
   joinNotifyCrew: false
